# Study

./: BuildRealTimeObjectDetection(Faster-R-CNN).ipynb  Dockerfile  GUI_For_Predict.py  ImplementRealTimeObjectDetection.ipynb  README.md  create_hand_dataset.ipynb  docker-compose.yml  generate_images.py  list_name_cars.npy  main.py  readme.txt  test.py  train.py
3D_face/V2_3DDFA/: render_obj.py
AnimeGan/: train.py
Car_classification/: DataProcessing.py  SceneRecognition.ipynb  main.py
FUlabs/SimplesML/: SimpleGradientDesent.ipynb
FingerHeartCamera/cpp/: CMakeLists.txt  test.cpp
FingerHeartCamera/cpp/include/: handlmk.h
MyMovieApp/: README.md
SimplesML/: DataBuildEquation.ipynb
StackGan/utils/: dataset.py
V2_3DDFA/: V2_3DDFA.py
android/: settings.gradle
android/app/: build.gradle
cpp/: CMakeLists.txt  test.cpp
cpp/include/: handlmk.h  handpose.h  yolov5.h
cpp/src/: handlmk.cpp  handpose.cpp  yolov5.cpp
inputs/: README.md
ios2/TestCamera/: Info.plist  SceneDelegate.swift  ViewController.swift
ios2/TestCamera.xcodeproj/: project.pbxproj
models/: discriminator.py  generator.py  layers.py
outputs/: README.md
src/dataset/: dataset.py
src/gui/: AddFilmDialog.form  AddFilmDialog.java  ChangePassword.form  FilmInfo.java  FilmPanel.java  Home.form  Home.java  ImageFileFilter.java  Login.form  UserForm.form
src/losses/: losses.py
src/losses_function/: losses.py
src/model/: BlurayFilter.java  FavoriteFilter.java  FilmDatabase.java  Filter.java  MyFilmDatabase.java
src/models/: discriminator.py  generator.py  (+1 more)
utils/: utils.py
(+128 files in other folders)
